crates/hwpx/tests/snapshots/font_tests__fontface_list_tests__fontface_list_single.snap
---
source: crates/hwpx/tests/font_tests.rs
expression: list
---
fontface:
  - font:
      - "@id": 0
        "@face": Sample Korean
        "@type": TTF
        "@isEmbedded": false
    "@lang": HANGUL
    "@fontCnt": 1
"@itemCnt": 1
